# chatroom

./: .gitignore  Cargo.toml  README.md  Rocket.toml  messages.db-shm  messages.db-wal  package-lock.json  package.json
.github/workflows/: ci.yaml
src/: database.rs  main.rs  models.rs  routes.rs
static/: index.html  reset.css  script.js  style.css
