[package]
name = "rocket_test"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
rocket = { version = "0.5.1", features = ["json"] }
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-native-tls"] }

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_sqlite"]
