[package]
name = "chatroom"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
rocket = { version = "0.5.1", features = ["json"] }
serde =  { version = "1.0.215", features = ["derive"] }
serde_with = "3.11.0"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-rustls","macros"] }

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_sqlite"]
